--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.7",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -21,6 +23,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/react": "18.3.5",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
@@ -28,3 +31,4 @@
     "tailwindcss": "^3.4.1"
   }
 }
+
